kubernetes/editor.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-editor
  annotations:
    cloud.google.com/backend-config: '{"default": "pp-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  # tag::NodePort2[]
  type: NodePort
  # end::NodePort2[]
  selector:
    # tag::app8[]
    app: editor
    # end::app8[]
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
      # tag::nodePort2[]
      nodePort: 31006
      # end::nodePort2[]
