kubernetes/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep-client
  # tag::labels1[]
  labels:
    # end::labels1[]
    # tag::app1[]
    app: client
    # end::app1[]
spec:
  selector:
    matchLabels:
      # tag::app2[]
      app: client
      # end::app2[]
  template:
    metadata:
      # tag::labels2[]
      labels:
        # end::labels2[]
        # tag::app3[]
        app: client
        # end::app3[]
    spec:
      containers:
        - name: peerprep-client-container
          # tag::image1[]
          image: gcr.io/peerprep-2d654/peerprep-client:latest
          # end::image1[]
          ports:
            # tag::containerPort1[]
            - containerPort: 3000
          # end::containerPort1[]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep-matching
  # tag::labels3[]
  labels:
    # end::labels3[]
    # tag::app4[]
    app: matching
    # end::app4[]
spec:
  selector:
    matchLabels:
      # tag::app5[]
      app: matching
      # end::app5[]
  template:
    metadata:
      # tag::labels4[]
      labels:
        # end::labels4[]
        # tag::app6[]
        app: matching
        # end::app6[]
    spec:
      containers:
        - name: peerprep-matching-container
          # tag::image2[]
          image: gcr.io/peerprep-2d654/peerprep-matching:latest
          # end::image2[]
          ports:
            # tag::containerPort2[]
            - containerPort: 4000
          # end::containerPort2[]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep-chat
  # tag::labels3[]
  labels:
    # end::labels3[]
    # tag::app4[]
    app: chat
    # end::app4[]
spec:
  selector:
    matchLabels:
      # tag::app5[]
      app: chat
      # end::app5[]
  template:
    metadata:
      # tag::labels4[]
      labels:
        # end::labels4[]
        # tag::app6[]
        app: chat
        # end::app6[]
    spec:
      containers:
        - name: peerprep-chat-container
          # tag::image2[]
          image: gcr.io/peerprep-2d654/peerprep-chat:latest
          # end::image2[]
          ports:
            # tag::containerPort2[]
            - containerPort: 5000
          # end::containerPort2[]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep-editor
  # tag::labels3[]
  labels:
    # end::labels3[]
    # tag::app4[]
    app: editor
    # end::app4[]
spec:
  selector:
    matchLabels:
      # tag::app5[]
      app: editor
      # end::app5[]
  template:
    metadata:
      # tag::labels4[]
      labels:
        # end::labels4[]
        # tag::app6[]
        app: editor
        # end::app6[]
    spec:
      containers:
        - name: peerprep-editor-container
          # tag::image2[]
          image: gcr.io/peerprep-2d654/peerprep-editor:latest
          # end::image2[]
          ports:
            # tag::containerPort2[]
            - containerPort: 6001
          # end::containerPort2[]
---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-client
spec:
  # tag::NodePort1[]
  type: NodePort
  # end::NodePort1[]
  selector:
    # tag::app7[]
    app: client
    # end::app7[]
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # tag::nodePort1[]
      nodePort: 31007
      # end::nodePort1[]

---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-matching
spec:
  # tag::NodePort2[]
  type: NodePort
  # end::NodePort2[]
  selector:
    # tag::app8[]
    app: matching
    # end::app8[]
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      # tag::nodePort2[]
      nodePort: 31004
      # end::nodePort2[]

---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-chat
spec:
  # tag::NodePort2[]
  type: NodePort
  # end::NodePort2[]
  selector:
    # tag::app8[]
    app: chat
    # end::app8[]
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      # tag::nodePort2[]
      nodePort: 31005
      # end::nodePort2[]

---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-editor
spec:
  # tag::NodePort2[]
  type: NodePort
  # end::NodePort2[]
  selector:
    # tag::app8[]
    app: editor
    # end::app8[]
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
      # tag::nodePort2[]
      nodePort: 31006
      # end::nodePort2[]
