kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: peerprep-client
spec:
  selector:
    run: peerprep-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: peerprep-chat
spec:
  selector:
    run: peerprep-chat
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 5000
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: peerprep-editor
spec:
  selector:
    run: peerprep-editor
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
      nodePort: 6001
  type: LoadBalancer
