kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-peerprep
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: peerprep-client
                port:
                  number: 3000
    - http:
        paths:
          - pathType: Prefix
            path: /matching
            backend:
              service:
                name: peerprep-matching
                port:
                  number: 4000
    - http:
        paths:
          - pathType: Prefix
            path: /chat
            backend:
              service:
                name: peerprep-chat
                port:
                  number: 5000
    - http:
        paths:
          - pathType: Prefix
            path: /editor
            backend:
              service:
                name: peerprep-editor
                port:
                  number: 6001
